force-app/main/default/objects/AccessCodeUsage__c/AccessCodeUsage__c.object-meta.xml
<CustomObject>
    <description>Display&apos;s daily audio minutes (on-demand &amp; op-assist) and web minutes used by access code.</description>
    <label>Access Code Usage</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>AccessCodeUsage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Code Usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>