force-app/main/default/objects/AccessCodeUsage__c/fields/Account_Lookup_for_Gainsight__c.field-meta.xml
<CustomField>
    <fullName>Account_Lookup_for_Gainsight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**DO NOT MODIFY - USED BY GAINSIGHT**</description>
    <label>Account Lookup for Gainsight</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Access Code Usage</relationshipLabel>
    <relationshipName>Access_Code_Usage</relationshipName>
    <type>Lookup</type>
</CustomField>