force-app/main/default/objects/AccessCodeUsage__c/fields/Contact_ID_for_Gainsight__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_for_Gainsight__c</fullName>
    <description>**DO NOT MODIFY - USED BY GAINSIGHT**</description>
    <formula>AccessCode__r.Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID for Gainsight</label>
    <type>Text</type>
</CustomField>