force-app/main/default/objects/AccessCodeUsage__c/fields/SFDC_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>SFDC_18_Digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFDC 18 Digit ID</label>
    <type>Text</type>
</CustomField>