force-app/main/default/objects/AccessCodeUsage__c/fields/UsageType__c.field-meta.xml
<CustomField>
    <fullName>UsageType__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audio - On Demand</fullName>
            </value>
            <value>
                <fullName>Audio - Operator Assisted</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>