force-app/main/default/objects/AccessCodeUsage__c/listViews/All_Web.listView-meta.xml
<ListView>
    <fullName>All_Web</fullName>
    <columns>NAME</columns>
    <columns>UsageType__c</columns>
    <columns>AccessCode__c</columns>
    <columns>Account_Lookup_for_Gainsight__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UsageType__c</field>
        <operation>equals</operation>
        <value>Web</value>
    </filters>
    <label>All - Web</label>
    <language>en_US</language>
</ListView>